Revision history for Perl extension WebService::Solr.


NEXT
 - No functionality changes.
 - Added a missing Carp.  Thanks, Luke Closs.

0.40    Wed Dec 11 21:32:17 CST 2017
 - No functionality changes.
 - New maintainer: Andy Lester
 - Big jump in version number to show a new numbering scheme.

0.24_01 Fri Dec  9 22:45:03 CST 2016 *DEVELOPER RELEASE*
 - Switch from the deprecated Any::Moose to Moo + Types::Standard.
   Thanks, ilmari.


# Before this point, Brian Cassidy was the maintainer.  The version
numbering scheme was different from what it is now.

0.23 2014-02-07 16:58
 - Fix a bug in Webservice::Solr::Query::stringify() where it would
   sometimes modify the query argument structure passed in.  This would
   make subsequent calls to stringify be broken and wrong, or even blow up.
 - The ::Query module no longer loads Data::Dumper automatically.

0.22 2013-04-02 17:03
 - Speed up ->value_for() to lazily find the first field, rather than
   processing all of ->values_for() and taking the first value.

0.21 2012-11-29
 - Get rid of use_ok() in the tests.
 - Minor documentation fixes.

0.20 2012-11-29
 - Avoid random hash key ordering issues (perl 5.17.6) when testing
   WebService::Solr::Query (RT #81527)

0.19 2012-05-25
 - Merge default_params in with other params in the post body

0.18 2012-05-24
 - Force previous switch to a post request to be utf-8 encoded

0.17 2012-03-29
 - Changed the solr search to use a post request (Robert Ward)

0.16 2011-10-11
 - Switch to Any::Moose so that Mouse may be used (Kevin Goess)

0.15 2011-07-14
 - Add a last_response accessor to get the most recent 
   WebService::Solr::Response object (Dan Brook)

0.14 2011-06-13
 - Fix broken logic for figuring out rows per page when not explicitly
   specified. It was broken on the last page when the number of rows
   returned was less than the default. We now just assume 10 rows which
   is the default in Solr.

0.13 2011-05-05