@@ -4,6 +4,7 @@ Revision history for Perl extension WebService::Solr.
 NEXT
  - No functionality changes.
  - Added a missing Carp.  Thanks, Luke Closs.
+ - Stopped using Module::Install and switched to ExtUtils::MakeMaker
 
 0.40    Wed Dec 11 21:32:17 CST 2017
  - No functionality changes.
